# dynamic-dns-keeper

./: Cargo.toml  LICENSE  README.md  aliyun_dns.go  cloudflare_dns.go  config.go  config.toml  executor.go  go.mod  main.go  worker.go
.github/workflows/: go.yml
shell/: install.sh
src/: aliyun.rs  cloudflare.rs  cmd.rs  config.rs  function.rs  init.rs  main.rs  menu.rs  worker.rs
src/d2k_core/: Record.rs  cloudflare.rs  config.rs  function.rs  mod.rs
systemd/: dynamic-dns-keeper.service
