[package]
name = "dynamic-dns-keeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.17"
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.20.1", features = ["full"] }
serde_json = { version = "^1.0.85" }
