[package]
name = "dynamic-dns-keeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.17"
reqwest = { version = "0.11.11", features = ["json","blocking"] }
tokio = { version = "1.20.1", features = ["full"] }
serde_json = { version = "^1.0.85" }
log = "0.4.17"
env_logger = "0.9.0"

toml = "0.5.9"
serde_derive = "1.0.32"
serde = "1.0.32"
